Integrating Unseq AA
    In this revision, we integrate the new `unseq-aa` pass with other alias analysis passes and the O3 optimisation pipeline. The alias analysis subsystem is created and destroyed multiple times within a single pipeline of O3 optimization passes, as transformation passes can't preserve the alias analysis results and can't consistently notify the subsystem about all the changes to the values. Thus `unseq-aa` is also initialized multiple times and is run at the end of the chain of alias analysis passes. If `unseq-aa` pass is able to state `must-not-alias` for a pair of pointer accesses, it returns that. Otherwise, the alias analysis result obtained from the remaining alias analysis pipeline is returned.

    As optimizations proceed, some of the subexpressions appearing in our intrinsic calls (as LValues) get completely eliminated. This gets handled seamlessly in our implementation, as the corresponding metadata nodes become `empty` during such optimizations. During the initialization of `unseq-aa`, we ignore those intrinsic calls where either argument is empty.

    There is also a stub for a pass RemoveAliasPredicates, it does nothing

--- a/llvm/lib/Transforms/Scalar/CMakeLists.txt
+++ b/llvm/lib/Transforms/Scalar/CMakeLists.txt
@@ -59,6 +59,7 @@ add_llvm_component_library(LLVMScalarOpts
   PlaceSafepoints.cpp
   Reassociate.cpp
   Reg2Mem.cpp
+  RemoveAliasPredicates.cpp
   RewriteStatepointsForGC.cpp
   SCCP.cpp
   SROA.cpp
