Moved custom libs and utils from llvm/ repo here
There was no need to maintain multiple copies of LLVM; so we have
now consolidated all LLVM changes into this repository. The features
included in this commit are:
1. LLVM2TFG tool
   (llvm/tools/eqchecker and llvm/lib/Analysis/Superopt)
2. Transformation pass for instrumenting marker call
   (llvm/lib/Transforms/SuperoptMod llvm/tools/opt/)
3. Transformation pass for lockstep execution (for debug-gen)
   (llvm/lib/Transforms/Lockstep)
4. Logic to emit the pre-code-generation IR (also called .cg)
   (llvm/lib/Transforms/Utils/SymbolRewriter.cpp
    llvm/include/llvm/CodeGen/MachineFunction.h)
5. Logic to get string versions of LLVM module elements (ptfg)
   (llvm/include/llvm/IR/Module.h llvm/lib/IR/AsmWriter.cpp)

--- a/llvm/tools/llc/CMakeLists.txt
+++ b/llvm/tools/llc/CMakeLists.txt
@@ -1,3 +1,8 @@
+include_directories(
+  ${LLVM_MAIN_SRC_DIR}/lib/Target/X86
+  ${LLVM_BINARY_DIR}/lib/Target/X86
+  )
+
 set(LLVM_LINK_COMPONENTS
   AllTargetsAsmParsers
   AllTargetsCodeGens
@@ -26,5 +31,7 @@ add_llvm_tool(llc
   intrinsics_gen
   SUPPORT_PLUGINS
   )
+
+target_link_libraries(llc PRIVATE ${SUPEROPT_LIBS})
 
 export_executable_symbols_for_plugins(llc)
