--- a/llvm/tools/opt/CMakeLists.txt
+++ b/llvm/tools/opt/CMakeLists.txt
@@ -44,3 +44,5 @@ export_executable_symbols_for_plugins(opt)
 if(LLVM_BUILD_EXAMPLES)
     target_link_libraries(opt PRIVATE ExampleIRTransforms)
 endif(LLVM_BUILD_EXAMPLES)
+
+target_link_libraries(opt PRIVATE LLVMAnalysis ${SUPEROPT_LIBS})
