--- a/clang/tools/driver/CMakeLists.txt
+++ b/clang/tools/driver/CMakeLists.txt
@@ -118,4 +118,6 @@ if(CLANG_ORDER_FILE AND
     set_target_properties(clang PROPERTIES LINK_DEPENDS ${CLANG_ORDER_FILE})
   endif()
 endif()
-target_link_libraries(clang PRIVATE ${SUPEROPT_LIBS})
+
+add_superopt_libs(slibs)
+target_link_libraries(clang PRIVATE ${slibs})
