--- a/llvm/lib/Transforms/SuperoptMod/CMakeLists.txt
+++ b/llvm/lib/Transforms/SuperoptMod/CMakeLists.txt
@@ -9,4 +9,5 @@ add_llvm_library( LLVMSuperopt MODULE
   opt
   )
 
-#target_link_libraries(LLVMSuperopt PRIVATE ${SUPEROPT_LIBS})
+#add_superopt_libs(slibs)
+#target_link_libraries(LLVMSuperopt PRIVATE ${slibs})
