--- a/llvm/tools/llc/CMakeLists.txt
+++ b/llvm/tools/llc/CMakeLists.txt
@@ -33,6 +33,9 @@ add_llvm_tool(llc
   SUPPORT_PLUGINS
   )
 
-target_link_libraries(llc PRIVATE ${SUPEROPT_LIBS})
+add_superopt_libs(slibs)
+message(STATUS "slibs=${slibs}")
+
+target_link_libraries(llc PRIVATE ${slibs})
 
 export_executable_symbols_for_plugins(llc)
